--- a/.github/workflows/cmake_windows_x86.yml
+++ b/.github/workflows/cmake_windows_x86.yml
@@ -1,4 +1,4 @@
-name: CMake
+name: cmake-windows-x86
 
 on:
   push:
@@ -11,12 +11,12 @@ on:
   #BUILD_TYPE: Debug
 
 jobs:
-  build:
+  build-windows-x86:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    runs-on: windows-2019 
 
     steps:
     - uses: actions/checkout@v2
@@ -25,12 +25,12 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DGCC_DEBUG=1
+      run: cmake -G "Visual Studio 17 2022" -B ${{github.workspace}}/build -S ${{github.workspace}}/src
 
     - name: Build
       # Build your program with the given configuration
       #run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      run: make -C ${{github.workspace}}/build
+      run: msbuild.exe ${{github.workspace}}\el.sln /property:Configuration=Release
 
     #- name: Test
     #  working-directory: ${{github.workspace}}/build
