--- a/.github/workflows/cmake_windows_x86.yml
+++ b/.github/workflows/cmake_windows_x86.yml
@@ -25,7 +25,7 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -G "Visual Studio 16 2019" -A Win64 -B ${{github.workspace}}/build -S ${{github.workspace}}/src
+      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src
 
     - name: Build
       # Build your program with the given configuration
