--- a/.github/workflows/msvc-x86.yml
+++ b/.github/workflows/msvc-x86.yml
@@ -1,4 +1,4 @@
-name: linux_gcc_x86
+name: msvc-x86
 
 on:
   push:
@@ -11,12 +11,12 @@ on:
   #BUILD_TYPE: Debug
 
 jobs:
-  build-linux-x86:
+  msvc-x86:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: ubuntu-latest
+    runs-on: windows-2019 
 
     steps:
     - uses: actions/checkout@v2
@@ -25,12 +25,15 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DGCC_DEBUG=1
+      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src
+
+    - name: Add MSBuild to PATH
+      uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build
       # Build your program with the given configuration
       #run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      run: make -C ${{github.workspace}}/build
+      run: msbuild.exe -m ${{github.workspace}}\build\el.sln /property:Configuration=Release
 
     #- name: Test
     #  working-directory: ${{github.workspace}}/build
