--- a/.github/workflows/linux-clang-x86.yml
+++ b/.github/workflows/linux-clang-x86.yml
@@ -1,4 +1,4 @@
-name: linux_gcc_x86
+name: linux-clang-x86
 
 on:
   push:
@@ -11,7 +11,7 @@ on:
   #BUILD_TYPE: Debug
 
 jobs:
-  build-linux-x86:
+  linux-clang-x86:
     # The CMake configure and build commands are platform agnostic and should work equally
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
@@ -21,11 +21,17 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install Clang
+      run: sudo apt-get install clang
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
       run: cmake -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DGCC_DEBUG=1
+      env:
+        CC: /usr/bin/clang
+        CXX: /usr/bin/clang++
 
     - name: Build
       # Build your program with the given configuration
