--- a/.github/workflows/msvc-x86.yml
+++ b/.github/workflows/msvc-x86.yml
@@ -21,11 +21,19 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install vcpkg
+      run: |
+        git clone https://github.com/Microsoft/vcpkg.git |
+        .\vcpkg\bootstrap-vcpkg.bat
+
+    - name: Install Boost.Test
+      run: pkg install [packages to install]
+
     - name: Configure CMake
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src
+      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src -DCMAKE_TOOLCHAIN_FILE=C:\vcpkg\scripts\buildsystems\vcpkg.cmake
 
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.0.2
