Use Google Test
- Refactor CMakeLists.txt - One for top level directory, one for test
  source directory.

- Begin transition to Ninja for *nix systems.

--- a/.github/workflows/linux-gcc-x86.yml
+++ b/.github/workflows/linux-gcc-x86.yml
@@ -17,17 +17,22 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Install Ninja
+      run: sudo apt install ninja-build
+
     - name: Configure CMake
       #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DGCC_DEBUG=1
+      run: cmake -G Ninja -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DGCC_DEBUG=1
 
     - name: Build
       #run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      run: make -C ${{github.workspace}}/build
+      run: cmake --build ${{github.workspace}}/build
+        
+    - name: Configure Test
+      run: cmake -G Ninja -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DGCC_DEBUG=1 -DBUILD_TEST=1
 
-    #- name: Test
-    #  working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-    #  run: ctest -C ${{env.BUILD_TYPE}}
-      
+    - name: Build Test
+      run: cmake --build ${{github.workspace}}/build
+
+    - name: Test
+      run: ${{github.workspace}}/build/test/test
