--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,36 +3,28 @@ project(el VERSION 0.1)
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-#find_package(GTest REQUIRED)
+set(BUILD_TEST 0 CACHE BOOL "Build test executable")
+if(BUILD_TEST)
+	add_library(
+		el
+		main.cpp
+		lexer.cpp
+	)
 
-include(FetchContent)
-FetchContent_Declare(
-  googletest
-  URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
-)
-FetchContent_MakeAvailable(googletest)
+	add_subdirectory(${PROJECT_SOURCE_DIR}/../test test)
+else()
+	add_executable(
+		el
+		main.cpp
+		lexer.cpp
+	)
+endif()
 
-enable_testing()
-
-# add the executable - must be before target_include_directories
-add_executable(
-	el
-	main.cpp
-	lexer.cpp
-)
-
-add_executable(
-	hello_test 
-	hello_test.cpp
-)
-target_link_libraries(hello_test gtest_main)
-
-include(GoogleTest)
-gtest_discover_tests(hello_test)
+#include(GoogleTest)
+#gtest_discover_tests(hello_test)
 
 set(MSVC_STATIC_CRT 1 CACHE BOOL "Windows executable with CRT baked in")
 set(GCC_DEBUG 0 CACHE BOOL "Tell clang or GCC to produce debug symbols")
-
 
 if(MSVC)
 	if(MSVC_STATIC_CRT)
@@ -48,9 +40,7 @@ else()
 	endif()
 endif()
 
-# header file to pass project version number to program
 # needs to come after set()'s
 configure_file(${PROJECT_SOURCE_DIR}/../include/cmake_config.h.in 
 	${PROJECT_SOURCE_DIR}/../include/cmake_config.h)
 target_include_directories(el PUBLIC ${PROJECT_SOURCE_DIR}/../include)
-#target_include_directories(el PUBLIC ${GTEST_INCLUDE_DIRS})
