--- a/.github/workflows/linux-clang-x86.yml
+++ b/.github/workflows/linux-clang-x86.yml
@@ -12,35 +12,30 @@ on:
 
 jobs:
   linux-clang-x86:
-    # The CMake configure and build commands are platform agnostic and should work equally
-    # well on Windows or Mac.  You can convert this to a matrix build if you need
-    # cross-platform coverage.
-    # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Install Clang
-      run: sudo apt-get install clang
+    - name: Install Ninja
+      run: sudo apt install ninja-build
 
     - name: Configure CMake
-      # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
-      # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DGCC_DEBUG=1
+      run: cmake -G Ninja -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DGCC_DEBUG=1
       env:
         CC: /usr/bin/clang
         CXX: /usr/bin/clang++
 
     - name: Build
-      # Build your program with the given configuration
       #run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      run: make -C ${{github.workspace}}/build
+      run: cmake --build ${{github.workspace}}/build
+        
+    - name: Configure Test
+      run: cmake -G Ninja -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DGCC_DEBUG=1 -DBUILD_TEST=1
 
-    #- name: Test
-    #  working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-    #  run: ctest -C ${{env.BUILD_TYPE}}
-      
+    - name: Build Test
+      run: cmake --build ${{github.workspace}}/build
+
+    - name: Test
+      run: ${{github.workspace}}/build/test/test
