--- a/.github/workflows/msvc-x86.yml
+++ b/.github/workflows/msvc-x86.yml
@@ -25,19 +25,20 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src
+      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src 
 
-    - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1.0.2
+      #- name: Add MSBuild to PATH
+      #uses: microsoft/setup-msbuild@v1.0.2
 
     - name: Build
-      # Build your program with the given configuration
-      #run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      run: msbuild.exe -m ${{github.workspace}}\build\el.sln /property:Configuration=Release
+      run: cmake --build ${{github.workspace}}\build
 
-    #- name: Test
-    #  working-directory: ${{github.workspace}}/build
-      # Execute tests defined by the CMake configuration.  
-      # See https://cmake.org/cmake/help/latest/manual/ctest.1.html for more detail
-    #  run: ctest -C ${{env.BUILD_TYPE}}
+    - name: Configure Test
+      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src -DBUILD_TEST=1
+
+    - name: Build Test
+      run: cmake --build ${{github.workspace}}\build
+
+    - name: Test
+      run: ${{github.workspace}}\build\test\Debug\test.exe
       
