Refactor `get_token()`
Originally, `get_token()` took a `std::FILE*` as an parameter. This made
it very difficult to test, as the test had to make a temporary file just
to pipe input into `get_token()`.

Change the parameter to `std::string`
to greatly simplify the tests

Fixes #14 and #18

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,8 +11,10 @@ if(BUILD_TEST)
 
 	add_executable(
 		test 
-		LexNumberTest.cpp
-		LexCommentTest.cpp
+		#LexNumberTest.cpp
+		#LexCommentTest.cpp
+		LexStringToDoubleTest.cpp
+		LexCharInStringTest.cpp
 	)
 
 target_link_libraries(test gtest_main el)
