--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -34,7 +34,7 @@ if(MSVC)
 	endif()
 else()
 	if(GCC_DEBUG)
-		set(CMAKE_CXX_FLAGS "-O2 -Werror -g")
+		set(CMAKE_CXX_FLAGS "-Werror -g")
 	else()
 		set(CMAKE_CXX_FLAGS "-O2 -Werror")
 	endif()
