--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,10 +11,9 @@ if(BUILD_TEST)
 
 	add_executable(
 		test 
-		#LexNumberTest.cpp
-		#LexCommentTest.cpp
+		LexNumberTest.cpp
+		LexCommentTest.cpp
 		LexStringToDoubleTest.cpp
-		LexCharInStringTest.cpp
 	)
 
 target_link_libraries(test gtest_main el)
