Improve StringToNumber tests
Optimize and clean up string_to_integer, string_to_double, and various
tests. There is more to do, but this is a good start.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,7 +13,7 @@ if(BUILD_TEST)
 		test 
 		LexCommentTest.cpp
 		LexNumberTest.cpp
-		LexStringToDoubleTest.cpp
+		LexStringToNumberTest.cpp
 		LexParenthesisTest.cpp
 		ParseExpressionTest.cpp
 	)
