--- a/.github/workflows/msvc-x86.yml
+++ b/.github/workflows/msvc-x86.yml
@@ -16,7 +16,7 @@ jobs:
     # well on Windows or Mac.  You can convert this to a matrix build if you need
     # cross-platform coverage.
     # See: https://docs.github.com/en/free-pro-team@latest/actions/learn-github-actions/managing-complex-workflows#using-a-build-matrix
-    runs-on: msvc-x86
+    runs-on: ESXI-WIN2022
 
     steps:
     - uses: actions/checkout@v2
@@ -25,7 +25,7 @@ jobs:
       # Configure CMake in a 'build' subdirectory. `CMAKE_BUILD_TYPE` is only required if you are using a single-configuration generator such as make.
       # See https://cmake.org/cmake/help/latest/variable/CMAKE_BUILD_TYPE.html?highlight=cmake_build_type
       #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src -DLLVM_DIR="C:\llvm\lib\cmake\llvm"
+      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src -DCMAKE_BUILD_TYPE=Debug -DLLVM_DIR="C:\llvm\lib\cmake\llvm"
 
       #- name: Add MSBuild to PATH
       #uses: microsoft/setup-msbuild@v1.0.2
@@ -34,7 +34,7 @@ jobs:
       run: cmake --build ${{github.workspace}}\build
 
     - name: Configure Test
-      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src -DBUILD_TEST=1 -DLLVM_DIR="C:\llvm\lib\cmake\llvm"
+      run: cmake -G "Visual Studio 16 2019" -B ${{github.workspace}}\build -S ${{github.workspace}}\src -DCMAKE_BUILD_TYPE=Debug -DBUILD_TEST=1 -DLLVM_DIR="C:\llvm\lib\cmake\llvm"
 
     - name: Build Test
       run: cmake --build ${{github.workspace}}\build
