--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -73,8 +73,13 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   else()
     set(CMAKE_CXX_FLAGS "/O2 /EHsc /wd4624")
   endif()
-else()
+elseif(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
+  message("not debug")
   set(CMAKE_CXX_FLAGS "-O2 -Werror")
+else()
+  message("debug")
+  set(CMAKE_CXX_FLAGS "-Werror")
+  message(${CMAKE_CXX_FLAGS})
 endif()
 
 # needs to come after set()'s
