Syntax: Require semicolons at end of statements

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -45,7 +45,9 @@ target_link_libraries(
     el_test_lib
     ${llvm_libs})
 
-set(CMAKE_CXX_FLAGS "-g -Og -Werror")
+if(UNIX)
+    set(CMAKE_CXX_FLAGS "-g -Og -Werror")
+endif()
 
 target_include_directories(el_test PUBLIC ${PROJECT_SOURCE_DIR}/../include)
 target_include_directories(el_test_lib PUBLIC ${PROJECT_SOURCE_DIR}/../include)
