--- a/.github/workflows/linux-gcc-x86.yml
+++ b/.github/workflows/linux-gcc-x86.yml
@@ -6,30 +6,18 @@ on:
   pull_request:
     branches: [ master ]
 
-#env:
-  # Customize the CMake build type here (Release, Debug, RelWithDebInfo, etc.)
-  #BUILD_TYPE: Debug
-
 jobs:
   linux-gcc-x86:
-    runs-on: esxi-debian
+    runs-on: arch
 
     steps:
     - uses: actions/checkout@v2
 
     - name: Configure CMake
-      #run: cmake -B ${{github.workspace}}/build -DCMAKE_BUILD_TYPE=${{env.BUILD_TYPE}}
-      run: cmake -G Ninja -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DCMAKE_BUILD_TYPE=Debug -DLLVM_DIR=/home/joey/bin/llvm/lib/cmake/llvm
+      run: cmake -G Ninja -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DCMAKE_BUILD_TYPE=Debug -DCMAKE_C_COMPILER=/usr/bin/gcc -DCMAKE_CXX_COMPILER=/usr/bin/g++
 
     - name: Build
-      #run: cmake --build ${{github.workspace}}/build --config ${{env.BUILD_TYPE}}
-      run: cmake --build ${{github.workspace}}/build
-        
-    - name: Configure Test
-      run: cmake -G Ninja -B ${{github.workspace}}/build -S ${{github.workspace}}/src -DBUILD_TEST=1 -DCMAKE_BUILD_TYPE=Debug -DLLVM_DIR=/home/joey/bin/llvm/lib/cmake/llvm
-
-    - name: Build Test
       run: cmake --build ${{github.workspace}}/build
 
     - name: Test
-      run: ${{github.workspace}}/build/test/test
+      run: ${{github.workspace}}/build/test/el_test
