Modularize command line argument parsing
Rewrite the command line parsing algorithm because the old one SUCKED.
Now, we parse each option one-by-one, make an object out of it and its
arguments, then place all the parsed options into a list. This makes it
easier to understand and it's actually testable

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,8 +11,9 @@ enable_testing()
 
 add_executable(
     el_test
-    test_parse_expression.cpp
+    test_cmd_options.cpp
     test_codegen.cpp
+    test_parse_expression.cpp
 )
 
 llvm_map_components_to_libnames(llvm_libs support core irreader)
