--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.14.5)
 project(el VERSION 0.1)
-set(CMAKE_CXX_STANDARD 14)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
 set(MSVC_STATIC_CRT 1 CACHE BOOL "Statically link Microsoft CRT")
@@ -13,6 +13,9 @@ if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   else()
     set(CMAKE_CXX_FLAGS "/O2 /EHsc /Z7 /wd4624 /wd4267 /wd4244 /wd4715 /wd4129")
   endif()
+elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND WIN32)
+  message("------- nominmax")
+  add_compile_definitions(NOMINMAX)
 elseif(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
   message("not debug")
   set(CMAKE_CXX_FLAGS "-O2 -Werror")
@@ -38,7 +41,6 @@ elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
 endif()
 
 if(WIN32)
-  message(STATUS "Winders!")
   add_compile_definitions(CMAKE_WIN32)
 endif()
 
