--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,48 +3,22 @@ project(el VERSION 0.1)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED True)
 
-set(MSVC_STATIC_CRT 1 CACHE BOOL "Statically link Microsoft CRT")
-
+# MSVC on Windows
 if(CMAKE_CXX_COMPILER_ID STREQUAL "MSVC")
   add_compile_definitions(NOMINMAX)
-  add_link_options("/ignore:4099")
-  if(MSVC_STATIC_CRT)
-    set(CMAKE_CXX_FLAGS "/O2 /EHsc /Z7 /MT /wd4624 /wd4267 /wd4244 /wd4099 /wd4715 /wd4129")
-  else()
-    set(CMAKE_CXX_FLAGS "/O2 /EHsc /Z7 /wd4624 /wd4267 /wd4244 /wd4715 /wd4129")
-  endif()
+  # Supress warnings LLVM warnings
+  set(CMAKE_CXX_FLAGS "/O2 /EHsc /Z7 /wd4624 /wd4267 /wd4244 /wd4099 /wd4715 /wd4129")
+# clang on Windows
 elseif(CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND WIN32)
-  message("------- nominmax")
   add_compile_definitions(NOMINMAX)
 elseif(NOT CMAKE_BUILD_TYPE STREQUAL "Debug")
-  message("not debug")
-  set(CMAKE_CXX_FLAGS "-O2 -Werror")
+  set(CMAKE_CXX_FLAGS "-Og -Werror")
 else()
-  message("debug")
-  set(CMAKE_CXX_FLAGS "-Werror")
+  set(CMAKE_CXX_FLAGS "-O2 -Werror")
   message(${CMAKE_CXX_FLAGS})
 endif()
 
-if(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
-  add_compile_definitions(CMAKE_MACOS)
-  if(NOT LLVM_DIR)
-    execute_process(
-      # on homebrew, "llvm" points to 13 (or whatever the latest version is),
-      # so we must append "@12" to the prefix in order to enforce LLVM 12.0.0
-      COMMAND brew --prefix llvm
-      OUTPUT_VARIABLE raw_prefix
-      )
-    string(STRIP ${raw_prefix} prefix)
-    set(LLVM_DIR ${prefix}/lib/cmake/llvm/)
-  endif()
-elseif(${CMAKE_SYSTEM_NAME} STREQUAL "Darwin")
-endif()
-
-if(WIN32)
-  add_compile_definitions(CMAKE_WIN32)
-endif()
-
-# LLVM
+# LLVM configuration
 find_package(LLVM REQUIRED CONFIG)
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
 message(STATUS "Using ${LLVM_DIR}")
@@ -57,7 +31,9 @@ add_executable(
   el
   main.cpp
 )
+target_include_directories(el PUBLIC ${PROJECT_SOURCE_DIR}/../include)
 
+# Core functionality
 add_library(
   el_lib
 
@@ -84,7 +60,9 @@ add_library(
   ${PROJECT_SOURCE_DIR}/../include/ast_variable.h
   ${PROJECT_SOURCE_DIR}/../include/data_type.h
 )
+target_include_directories(el_lib PUBLIC ${PROJECT_SOURCE_DIR}/../include)
 
+# Let el and el_lib use LLVM
 llvm_map_components_to_libnames(llvm_libs support core irreader)
 target_link_libraries(
   el 
@@ -92,20 +70,15 @@ target_link_libraries(
   ${llvm_libs}
 )
 
-#set(BUILD_TEST 0 CACHE BOOL "Build test executable")
-
+# Google test
 add_subdirectory(${PROJECT_SOURCE_DIR}/../test test)
 
-set(BUILD_FUZZER OFF CACHE BOOL "Build fuzzer")
 # Fuzz Testing
+set(BUILD_FUZZER OFF CACHE BOOL "Build fuzzer")
 if(NOT WIN32 AND BUILD_FUZZER)
   message(STATUS "Building fuzzer")
   add_subdirectory(${PROJECT_SOURCE_DIR}/../fuzz fuzz)
 endif()
 
-# needs to come after set()'s
 configure_file(${PROJECT_SOURCE_DIR}/../include/cmake_config.h.in 
   ${PROJECT_SOURCE_DIR}/../include/cmake_config.h)
-    
-target_include_directories(el PUBLIC ${PROJECT_SOURCE_DIR}/../include)
-target_include_directories(el_lib PUBLIC ${PROJECT_SOURCE_DIR}/../include)
